# tagnify-project

./: LICENSE  README.md
sdk/: .gitignore  README.md  pyproject.toml
sdk/tagnify/: exceptions.py  parser.py  prompt.py  schema.py  validator.py
sdk/tagnify/backends/: __init__.py  base.py  ollama.py
sdk/tests/: test_backends.py  test_parser.py  test_prompt.py  test_schema.py
